# peerix

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  diagnose_network.sh  flake.nix  future-work.md  ipfs_dashboard.sh  module.nix  monitor_flood.sh  overlay.nix  pyproject.toml  requirements.txt  setup.py
nix/: libp2p.nix
peerix/: __main__.py  app.py  cache_registry.py  config.py  filtered.py  homeostasis.py  ipfs_compat.py  ipfs_store.py  iroh_app.py  iroh_proto.py  lan_discovery.py  libp2p_dht.py  libp2p_host.py  libp2p_protocols.py  libp2p_store.py  local.py  local_asyncio.py  net_validation.py  origin_detector.py  peer_identity.py  remote.py  signing.py  store.py  store_scanner.py  tracker.py  tracker_client.py  tracker_main.py  verified.py  wan.py
peerix/tests/: __init__.py  conftest.py  test_core.py  test_multi_cache.py
scripts/: network_watchdog.sh  test_ipfs_distribution.sh
test-vm/: flake.nix  slow-build.nix
