[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "peerix"
dynamic = ["version"]
description = "Peer-to-peer Nix binary cache with NAT traversal"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "trio",
    "httpx",
    "hypercorn",
    "starlette",
    "psutil",
]

[project.optional-dependencies]
libp2p = [
    "libp2p>=0.6.0",
    "multiaddr>=0.0.9",
]

[project.scripts]
peerix = "peerix.__main__:run"
peerix-tracker = "peerix.tracker_main:run"

[tool.setuptools]
packages = ["peerix"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}
